Quick and dirty check whether someone else has modified the record