@@ -4,20 +4,22 @@ import lombok.Builder;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
 @Getter
 @EqualsAndHashCode(callSuper = true)
 public class QueryGetRequest extends GetRequest {
-    private String condition = "";
+    private final String condition;
+    private final List<String> fieldsToReturn;
 
     @Builder
-    public QueryGetRequest(String tableName, boolean showDisplayValues, boolean excludeReferenceLink, String condition) {
+    public QueryGetRequest(String tableName, boolean showDisplayValues, boolean excludeReferenceLink, String condition, List<String> fieldsToReturn) {
         super(tableName, showDisplayValues, excludeReferenceLink);
         this.condition = condition;
+        this.fieldsToReturn = fieldsToReturn;
     }
 
     @Override
@@ -29,11 +31,10 @@ public class QueryGetRequest extends GetRequest {
     public List<String> getParameters() {
         List<String> parameters = new ArrayList<>(super.getParameters());
         if (getCondition() != null) {
-            try {
-                parameters.add("sysparm_query=" + URLEncoder.encode(getCondition(), "UTF-8"));
-            } catch (UnsupportedEncodingException e) {
-                throw new RuntimeException("Wrong encoding? Developer's fault! ", e);
-            }
+            parameters.add("sysparm_query=" + URLEncoder.encode(getCondition(), StandardCharsets.UTF_8));
+        }
+        if (getFieldsToReturn() != null && getFieldsToReturn().size() > 0) {
+            parameters.add("sysparm_fields=" + String.join(",", getFieldsToReturn()));
         }
         return parameters;
     }
